frontend/src/styles/learn.scss
/* ... */
@mixin menu_vertical_current_colors {
    @include menu_vertical_current_hover_colors;

    &:visited {
        color: #303030;
        @include menu_vertical_current_hover_colors;
    }
}

@mixin non_menu_vertical_current_hover_colors {
    color: #e8e8e8;
    &:hover {
        color: lightgoldenrodyellow;
    }
}

.wy-menu-vertical {
    p.caption {
        color: #fff;
    }
    li {
        a {
            @include non_menu_vertical_current_hover_colors;

            &:visited {
                @include non_menu_vertical_current_hover_colors;
            }
        }
        &.current {
            a {
                background-color: #eeeeee;
                color: #303030;

                @include menu_vertical_current_colors;
            }
            &.toctree-l2 {
                li.toctree-l3>a {
                    @include menu_vertical_current_colors;
                }
            }
            &.toctree-l3 {
                li.toctree-l4>a {
                    @include menu_vertical_current_colors;
                }
            }
        }
    }
}

.wy-nav-top {
    background-color: $color-theme-bg-dark;
    img {
        border-radius: 0 !important;
        background-color: transparent !important;
    }

    a {
        color: #e8e8e8;

        &:hover {
            color: #100000;
        }

        &:visited {
            color: #e8e8e8;
            &:hover {
                color: #100000;
            }
        }
    }
}

.wy-table-responsive table td, .wy-table-responsive table th {
    white-space: normal;
}

.wy-table-responsive {
    margin-bottom: 24px;
    max-width: 100%;
    overflow: visible;
}

.wy-menu {
    p {
        margin-left: 20px;
        margin-bottom: 7px;
        margin-top: 10px;
    }
}

.admonition-in-other-languages {
    background: $color-theme-alt-bg;
    padding: 12px;
    margin-bottom: 24px;
}

.rst-content {
    .highlight {
        background: #ebf4f9;
    }
}

// theme overrides
// widget
pre.widget {
    white-space: normal;
    padding-bottom: 10px;
    position: relative;
}

.tab {
    display: flex;
    flex-wrap: nowrap;
    overflow-x: auto;
    -webkit-overflow-scrolling: touch;
    button {
        background-color: inherit;
        float: left;
        outline: none;
        cursor: pointer;
        padding: 6px 16px;
        transition: 0.3s;
        flex: 0 0 auto;
        border: 1px solid transparent;
        color: $color-tab-font;
        font-family: $mono-font;
        font-size: 13px;
        &:hover {
            color: $color-tab-hover-font;
            cursor: pointer;
        }
        &.active {
            color: $color-tab-active-font;
            border-top: 2px solid $color-theme-bg-dark;
            border-left: 1px solid $color-widget-border;
            border-right: 1px solid $color-widget-border;
        }
    }
}

.tab-content {
    display: none;
    padding: 0px;
}

.settings-bar {
    background-color: $color-settingsbar-bg;
    font-family: $lato-sans-serif-font;
    padding-left: 13px;
    display: block;
    margin-top: 0px;
    margin-bottom: 10px;

    button {
        background-color: transparent;
        color: $color-font-grey;
        opacity: 0.5;
        padding: 5px;
        margin-left: 5px;
        margin-right: 5px;
        font-size: 13px;
        border: none;

        &:hover {
            opacity: 1.0;
        }
    }

    .dropdown-container {
        position: relative;
        display: inline-block;

        .dropdown-content {
            display: none;
            position: absolute;
            background-color: $color-theme-bg-light;
            min-width: 300px;
            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
            z-index: 1;
            padding: 8px;
            cursor: pointer;
            -webkit-user-select: none;
            -moz-user-select: none;
            -ms-user-select: none;
            user-select: none;

            a {
                color: black;
                padding: 12px 16px;
                text-decoration: none;
                display: block;

                &:hover {
                    background-color: #ddd;
                }
            }
        }

        &:hover {
            .dropdown-content {
                display: block;
            }
            .dropdown-btn {
                opacity: 1.0;
            }
        }
    }
}
/* ... */

